--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "vite-plugin-solid": "^2.11.6"
   },
   "dependencies": {
-    "solid-js": "^1.9.5"
+    "@tailwindcss/vite": "^4.0.17",
+    "solid-js": "^1.9.5",
+    "tailwindcss": "^4.0.17"
   }
 }
